# lesson_27_HW

./: db.sqlite3  pyproject.toml
ads/: models.py  settings.py  urls.py  utils.py  views.py
ads/migrations/: 0001_initial.py
data/: ads.json  categories.json
